--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,6 +1,10 @@
+
+//@import 'helpers';
+@import url('https://rsms.me/inter/inter-ui.css');
+
 html,
 body {
-  font-family: sans-serif;
+  font-family: 'Inter UI', sans-serif;
   width: 100%;
   height: 100%;
   margin: 0;
