--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,13 +8,12 @@
 html,
 body {
   font-family: 'Inter UI', Roboto,sans-serif;
-  width: 100%;
+  width: auto;
   height: 100%;
   margin: 0;
-  padding: 0;
+  padding: 0;  
   letter-spacing: 1px;
 }
-
 h1 {
   text-align: center;
   font-size: 36px;
